--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,15 @@
 #tool_skills_list .skill-item-actions a {
     display: inline-block;
     vertical-align: middle;
+    position: relative;
+    z-index: 0;
 }
+.skill-actions .toolskills-status-switch .form-switch .form-check-input,
+.item-actions .toolskills-status-switch .form-switch .form-check-input {
+    position: absolute;
+    z-index: -1;
+}
+
 /* Make the skills tab marning top */
 body#page-admin-tool-skills-manage-list .nav-tabs {
     margin-top: 30px;
